--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "4.1.3",
     "gatsby": "^2.0.0",
+    "gatsby-plugin-catch-links": "^2.0.4",
+    "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.6",
+    "gatsby-plugin-sitemap": "^2.0.1",
     "gatsby-remark-images": "^2.0.4",
-    "gatsby-source-filesystem": "^2.0.2",
+    "gatsby-source-filesystem": "^2.0.3",
     "gatsby-transformer-remark": "^2.1.6",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
