--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write '**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "deploy": "gatsby build && echo \"www.brentjanderson.com\" > public/CNAME && gh-pages -d public -b master"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1",
