--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Brent Anderson <me@brentjanderson.com>",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.5",
+    "@fortawesome/free-brands-svg-icons": "^5.4.1",
     "@fortawesome/free-solid-svg-icons": "^5.4.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "bootstrap": "4.1.3",
