Update blog post with laptop config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Brentjanderson.com",
+  "name": "brentjanderson.com",
   "description": "Brent Anderson's cool website",
   "version": "1.0.0",
   "author": "Brent Anderson <me@brentjanderson.com>",
