--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.4.1",
     "@fortawesome/free-solid-svg-icons": "^5.4.0",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "bootstrap": "4.1.3",
-    "gatsby": "^2.0.0",
+    "bootstrap": "4.3.1",
+    "gatsby": "2.18.1",
     "gatsby-plugin-catch-links": "^2.0.4",
     "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "^2.0.6",
+    "gatsby-plugin-sharp": "2.3.2",
     "gatsby-plugin-sitemap": "^2.0.1",
     "gatsby-remark-images": "^2.0.4",
     "gatsby-source-filesystem": "^2.0.3",
@@ -40,8 +40,10 @@
     "new-post": "bin/new_post.sh"
   },
   "devDependencies": {
+    "@types/react": "16.9.11",
     "gh-pages": "^2.0.1",
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.2",
+    "typescript": "3.7.2"
   },
   "repository": {
     "type": "git",
