--- a/package.json
+++ b/package.json
@@ -47,6 +47,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/brentjanderson/brentjanderson.github.io"
   }
 }
