--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.5",
     "@fortawesome/free-brands-svg-icons": "^5.4.1",
     "@fortawesome/free-solid-svg-icons": "^5.4.0",
-    "@fortawesome/react-fontawesome": "^0.1.3",
-    "bootstrap": "4.3.1",
-    "gatsby": "^2.22.15",
-    "gatsby-plugin-catch-links": "^2.0.4",
-    "gatsby-plugin-feed": "^2.0.8",
-    "gatsby-plugin-manifest": "^2.0.2",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sharp": "2.3.2",
-    "gatsby-plugin-sitemap": "^2.0.1",
-    "gatsby-remark-images": "^2.0.4",
-    "gatsby-source-filesystem": "^2.0.3",
-    "gatsby-transformer-remark": "^2.1.6",
+    "@fortawesome/react-fontawesome": "^0.1.10",
+    "bootstrap": "^4.5.0",
+    "gatsby": "^2.22.17",
+    "gatsby-plugin-catch-links": "^2.3.4",
+    "gatsby-plugin-feed": "^2.5.4",
+    "gatsby-plugin-manifest": "^2.4.10",
+    "gatsby-plugin-offline": "^3.2.8",
+    "gatsby-plugin-react-helmet": "^3.3.3",
+    "gatsby-plugin-sharp": "^2.6.10",
+    "gatsby-plugin-sitemap": "^2.4.4",
+    "gatsby-remark-images": "^3.3.9",
+    "gatsby-source-filesystem": "^2.3.10",
+    "gatsby-transformer-remark": "^2.8.14",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0",
-    "reactstrap": "^6.4.0"
+    "react-helmet": "^6.0.0",
+    "reactstrap": "^8.4.1"
   },
   "keywords": [
     "gatsby"
@@ -40,10 +40,11 @@
     "new-post": "bin/new_post.sh"
   },
   "devDependencies": {
-    "@types/react": "16.9.11",
-    "gh-pages": "^2.0.1",
-    "prettier": "^1.14.2",
-    "typescript": "3.7.2"
+    "@types/react": "^16.9.35",
+    "@types/webpack": "^4.41.17",
+    "gh-pages": "^3.0.0",
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.3"
   },
   "repository": {
     "type": "git",
